<resources>
    <string name="app_name">Météo Lookout</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_map_zone">MapZoneActivity</string>
    <string name="title_activity_favoris">FavorisActivity</string>
    <string name="detail_bouton">Détails</string>
    <string name="carte_bouton">Carte</string>
    <string name="liste_des_zones">Liste des régions</string>
    <string name="carte_des_zone">Carte des régions</string>
    <string name="locations_favorites">Endroits Favoris</string>
    <string name="recherche">Recherche</string>
    <string name="title_activity_recherche_activty">RechercheActivty</string>
    <string name="par_zone">Par région</string>
    <string name="par_location">Par endroit</string>
    <string name="parametre">Paramètres</string>
    <string name="parametre_value">Valeurs</string>
</resources>
